--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,15 +16,13 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 # Auto-initialize DB tables according to definition of entity classes
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:sql/schema.sql
-spring.sql.init.data-locations=classpath:sql/data.sql
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=false
 # Show Hibernate-generated SQL in console & disable open-in-view, custom error page
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 server.error.whitelabel.enabled=false
 server.error.include-exception=true
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security=DEBUG
+debug=true
