--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,17 @@ spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=false
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.schema-locations=classpath:sql/schema.sql
+spring.sql.init.data-locations=classpath:sql/data.sql
 # Show Hibernate-generated SQL in console & disable open-in-view, custom error page
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 server.error.whitelabel.enabled=false
 server.error.include-exception=true
+#Debug
 debug=true
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
